@@ -9,6 +9,9 @@
 #   logs, splines and polynomials
 # 2014-09-24: added option for KR cov matrix to mer.to.glm(). J. Fox
 # 2014-12-07: don't assume that pbkrtest is installed. J. Fox
+# 2014-12-20: mer.to.glm failed for negative.binomial() because the link has an argument
+#   that was handled incorrectly by the family.glmResp function.  This function is no longer
+#   used by mer.to.glm.  The same error will recur in any link with an argument.
 
 
 # the function lm.wfit fit gets the hessian wrong for mer's.  Get the variance
@@ -80,31 +83,48 @@ lme.to.glm <- function(mod) {
 # model as follows.  It is of class c("fakeglm", "glm", "lm")
 # several items are added to the created objects. Do not export
 
+
 mer.to.glm <- function(mod, KR=require("pbkrtest", quietly=TRUE)) {
-    family <- family(mod)
-    link <- family$link
-    family <- family$family
-    cl <- mod@call
-    if(cl[[1]] =="nlmer") stop("effects package does not support 'nlmer' objects")
-    m <- match(c("formula", "family", "data", "weights", "subset", 
-                 "na.action", "start", "offset",  
-                 "model", "contrasts"), names(cl), 0L)
-    cl <- cl[c(1L, m)]
-    cl[[1L]] <- as.name("glm")
-    cl$formula <- fixmod(as.formula(cl$formula))
-    mod2 <- eval(cl)
-    mod2$coefficients <- lme4::fixef(mod) #mod@fixef
-    mod2$vcov <- if (family == "gaussian" && link == "identity" && KR) as.matrix(pbkrtest::vcovAdj(mod)) else as.matrix(vcov(mod))
-    mod2$linear.predictors <- model.matrix(mod2) %*% mod2$coefficients
-    mod2$fitted.values <- mod2$family$linkinv(mod2$linear.predictors)
-    mod2$weights <- as.vector(with(mod2,
-          prior.weights * (family$mu.eta(linear.predictors)^2 /
-                           family$variance(fitted.values))))
-    mod2$residuals <- with(mod2,
-          prior.weights * (y - fitted.values)/weights )
-    class(mod2) <- c("fakeglm", class(mod2))
-    mod2
-    }
+# object$family$family doesn't work correctly with negative binomial links and glms because of the
+# argument in the link function, so the old line
+#   family <- family(mod)
+# returns an error message for these models.  The following kluge fixes this
+  object <- mod@resp
+  if(class(object) == "glmResp") {
+     name <- if(substr(object$family$family, 1, 17) == "Negative Binomial")
+             "negative.binomial" else object$family$family
+     arg <- if(name == "negative.binomial") 
+       list(as.numeric(gsub("\\)", "", gsub("\\(", "", substr(object$family$family, 18, 100))))) else
+       list()
+     family <- if (is.null(object$family$initialize))
+       do.call(name, arg) else object$family} else {
+  family <- family(mod)
+       }
+# end
+  link <- family$link
+  family <- family$family
+  cl <- mod@call
+  if(cl[[1]] =="nlmer") stop("effects package does not support 'nlmer' objects")
+  m <- match(c("formula", "family", "data", "weights", "subset", 
+               "na.action", "start", "offset",  
+               "model", "contrasts"), names(cl), 0L)
+  cl <- cl[c(1L, m)]
+  cl[[1L]] <- as.name("glm")
+  cl$formula <- fixmod(as.formula(cl$formula))
+  mod2 <- eval(cl)
+  mod2$coefficients <- lme4::fixef(mod) #mod@fixef
+  mod2$vcov <- if (family == "gaussian" && link == "identity" && KR) as.matrix(pbkrtest::vcovAdj(mod)) else as.matrix(vcov(mod))
+  mod2$linear.predictors <- model.matrix(mod2) %*% mod2$coefficients
+  mod2$fitted.values <- mod2$family$linkinv(mod2$linear.predictors)
+  mod2$weights <- as.vector(with(mod2,
+                                 prior.weights * (family$mu.eta(linear.predictors)^2 /
+                                                    family$variance(fitted.values))))
+  mod2$residuals <- with(mod2,
+                         prior.weights * (y - fitted.values)/weights )
+  class(mod2) <- c("fakeglm", class(mod2))
+  mod2
+}
+
                                               
 #method for 'fakeglm' objects. Do not export   
 vcov.fakeglm <- function(object, ...) object$vcov
